# matrix-nio

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yaml   .travis.yml  CHANGELOG.md  LICENSE.md  Makefile  README.md  SECURITY.md  codecov.yml  index.html  nio-cli.py  pyproject.toml  requirements.txt  rtd-requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: pypi-publish.yml  python-app.yml  tests.yml
contrib/archlinux/pkgbuild/: PKGBUILD  PKGBUILD.git
doc/: built-with-nio.rst  conf.py  contributing.rst  examples.rst  index.rst  nio.rst
docker/: Dockerfile  README.md  build_and_install_libolm.sh
examples/: README.md  basic_client.py  manual_encrypted_verify.py  matrix-msg-send-nio.py  nio  restore_login.py  room_messages.py  send_image.py  verify_with_emoji.py
nio/: __init__.py  _compat.py  api.py  cli.py  client.py  cryptostore.py  encryption.py  events.py  exceptions.py  http.py  log.py  messages.py  monitors.py  responses.py  rooms.py  schemas.py  store.py
nio/client/: __init__.py  async_client.py  base_client.py  http_client.py
nio/crypto/: __init__.py  async_attachments.py  attachments.py  device.py  key_export.py  key_request.py  log.py  memorystores.py  olm_machine.py  sas.py  sessions.py  user_identities.py
nio/crypto/verification/: __init__.py  machine.py  requests.py  sas.py
nio/event_builders/: __init__.py  direct_messages.py  event_builder.py  room_events.py  state_events.py
nio/events/: .account_data.py.swp  __init__.py  account_data.py  common.py  encrypted_events.py  ephemeral.py  invite_events.py  misc.py  presence.py  room_events.py  to_device.py
nio/spec_definitions/client-server/: event_filter.py  one_time_keys.py  openid_token.py  public_rooms_chunk.py  public_rooms_response.py  request_token_response.py  timeline_batch.py
nio/spec_definitions/client-server/errors/: rate_limited.py
nio/spec_definitions/client-server/wellknown/: identity_server.py
nio/spec_definitions/client_server/: __init__.py  auth_data.py  auth_response.py  client_device.py  client_event.py  client_event_without_room_id.py  cross_signing_key.py  device_keys.py  event_batch.py  key_backup_auth_data.py  key_backup_data.py  key_backup_session_data.py  login.py  m.login.terms_params.py  m.mentions.py  m.relates_to.py  megolm_export_session_data.py  public_rooms_chunk.py  public_rooms_response.py  push_condition.py  push_rule.py  push_ruleset.py  request_email_validation.py  request_msisdn_validation.py  room_event_filter.py  room_key_backup.py  security.py  sso_login_flow.py  state_event_batch.py  sync_filter.py  tag.py  third_party_signed.py  user_identifier.py
nio/spec_definitions/client_server/errors/: error.py  rate_limited.py
nio/spec_definitions/client_server/wellknown/: __init__.py  discovery.py  full.py  homeserver.py  identity_server.py
nio/store/: __init__.py  database.py  file_trustdb.py  log.py  models.py
src/nio/: __init__.py  api.py  http.py  monitors.py  responses.py  rooms.py  schemas.py
src/nio/client/: __init__.py  async_client.py  base_client.py  http_client.py
src/nio/crypto/: __init__.py  async_attachments.py  attachments.py  device.py  key_export.py  memorystores.py  olm_machine.py  sas.py  sessions.py
src/nio/event_builders/: direct_messages.py
src/nio/events/: __init__.py  account_data.py  base_event.py  common.py  ephemeral.py  invite_events.py  knock_events.py  misc.py  presence.py  room_events.py  to_device.py
src/nio/store/: __init__.py  database.py  file_trustdb.py
tests/: api_new_test.py  api_old_test.py  api_test.py  async_attachment_test.py  async_client_test.py  attachment_test.py  client_test.py  conftest.py  conftest_async.py  encryption_test.py  event_builders_test.py  event_test.py  helpers.py  http2_test.py  http_test.py  key_export_test.py  memory_store_test.py  responses_test.py  room_test.py  sas_test.py  schemas_test.py  sessions_test.py  store_test.py
tests/data/: context.json  deactivate_response.json  file_response  get_hierarchy_response.json  http_502.txt  http_503.txt  keys_query.json  keys_query_cross_signing.json  keys_query_cross_signing_other_user.json  limit_exceeded_error.json  list_public_rooms.json  register_interactive_response.json  register_response.json  room_state.json  sample_text_file.py  sync.json  test_bytes  weechat_test.db  whoami_response.json  whois_response.json
tests/data/encryption/: @example:localhost_DEVICEID.libolm_inbound_group_session_pickle_v1.db  example_DEVICEID.db  example_DEVICEID.known_devices  example_DEVICEID.libolm_account_pickle_v2.db  example_DEVICEID.libolm_account_pickle_v4.db  example_DEVICEID.libolm_session_pickle_v1.db  known_devices
tests/data/events/: call_answer.json  call_candidates.json  call_candidates_legacy.json  call_hangup.json  call_invite.json  create.json  create_typed.json  create_v12.json  dummy.json  forwarded_room_key.json  guest_access.json  key_accept.json  key_cancel.json  key_key.json  key_mac.json  key_start.json  megolm.json  message_notice.json  name.json  olm.json  olm_event.json  power_levels.json  push_rules.json  reaction.json  receipt.json  receipt_invalid.json  room_encrypted_image.json  room_encryption.json  room_key.json  room_key_accept.json  room_key_cancel.json  room_key_key.json  room_key_mac.json  room_key_request.json  room_key_request_cancel.json  room_key_start.json  room_key_verif_ready.json  room_key_verif_request.json  sticker.json  to_flatten.json  (+2 more)
